added save buttons

--- a/calendar.css
+++ b/calendar.css
@@ -1,9 +1,12 @@
-.body {
-background-color:purple;
+body {
 
 
 
 }
+
+.amber-textarea.md-form .prefix.active {
+    color: #ffa000;
+  }
  .jumbotron{
 
 
